# ratatui-keybind-template

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml  typo.yml
src/: app.rs  keybinds.rs  main.rs  ui.rs
