[package]
name = "ratatui-keybind-template"
version = "0.1.0"
edition = "2021"
description = "A ratatui application with modular keybinding system using crossterm-keybind"
license = "MIT"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29" }
crossterm-keybind = { version = "0.3.3", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
